--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,196 @@
+# Entornos virtuales
 venv/
+env/
+ENV/
+.venv/
+virtualenv/
+
+# Entornos de Python
 __pycache__/
-*.pyc
-instance/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Archivos de entorno
 .env
+.env.local
+.env.production
+.env.test
+.env.*
+.venv
+
+# Archivos de IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+__pycache__/
+
+# Editor temporales
+# JetBrains IDEs
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# VS Code
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Archivos de sistema
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Archivos de base de datos SQLite
 *.db
+*.sqlite
+*.sqlite3
+
+# Logs
+*.log
+logs/
+
+# Archivos de caché y temporales
+.cache/
+.pytest_cache/
+.mypy_cache/
+.coverage
+.coverage.*
+htmlcov/
+.pytest_cache/
+
+# Archivos de Sphinx
+docs/_build/
+
+# Archivos de Jupyter Notebook
+.ipynb_checkpoints/
+
+# Archivos de packaging / distribución
+*.mo
+*.pot
+
+# Archivos de seguridad
+secrets.py
+config_secret.py
+
+# Archivos de macOS
+.AppleDouble
+.LSOverride
+
+# Archivos de Windows
+[Tt]humbs.db
+
+# Archivos de Excel/PDF temporales (si los generas)
+tmp/
+temp/
+uploads/
+downloads/
+
+# Archivos específicos del proyecto (ajusta según necesites)
+/instance/
+*.xlsx
+*.xls
+*.pdf
+!requirements.txt
+
+# Coverage reports
+.coverage
+.coverage.*
+htmlcov/
+
+# PyCharm
+.idea/
+*.iml
+
+# PyEnv
+.python-version
+
+# Celery
+celerybeat-schedule.*
+celerybeat.pid
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
+
+# PyInstaller
+*.spec
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Jupyter
+jupyter_notebook_config.py
+
+# Pycharm
+.idea/
+
+# VS Code
+.vscode/
+
+# Temporary files
+*.tmp
+*.temp
+
+# Local development files
+local_settings.py
+local_config.py
