--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     startCommand: gunicorn wsgi:app
     envVars:
       - key: DATABASE_URL
-        value: postgresql://inventariate_db_user:CV59oRwHm9p2TVvuOtQHvx8TRHUWCGLb@dpg-d2vjio7diees738esntg-a.ohio-postgres.render.com/inventariate_db
+        value: postgresql+psycopg://inventariate_db_user:CV59oRwHm9p2TVvuOtQHvx8TRHUWCGLb@dpg-d2vjio7diees738esntg-a.ohio-postgres.render.com/inventariate_db
       - key: AWS_ACCESS_KEY_ID
         sync: false
       - key: AWS_SECRET_ACCESS_KEY
