--- a/render.yaml
+++ b/render.yaml
@@ -3,22 +3,16 @@ services:
     name: inventariate
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: bash -c "flask db upgrade && gunicorn wsgi:app"
+    startCommand: bash -c "echo '==> Running DB upgrade' && flask db upgrade && echo '==> Starting gunicorn' && gunicorn wsgi:app"
     envVars:
       - key: FLASK_APP
         value: wsgi.py
-
-      # DATABASE_URL desde la DB de Render
       - key: DATABASE_URL
         fromDatabase:
           name: inventariate-db
           property: connectionString
-
-      # SECRET_KEY seguro
       - key: SECRET_KEY
         generateValue: true
-
-      # variables de AWS, sin valores en el repo
       - key: AWS_ACCESS_KEY_ID
         sync: false
       - key: AWS_SECRET_ACCESS_KEY
